# nanos

./: .gitignore  Cargo.toml  Makefile  README.md  a.out  add.c  build.rs  crt0.s  kernel.ld  ns16550a.s  riscv64-virt.dtb  riscv64-virt.lds  runtime.s  uart.c  uart.rs
.cargo/: config.toml
src/: main.rs  nanos_alloc.rs  uart.rs
src/asm/: mod.rs  rt.s
src/lds/: kernel.ld
