[package]
name = "nanos"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
riscv = "0.7.0"
spin = "0.9.2"

[build-dependencies]
cc = "1.0.71"
